# pytorch-ssd

./: cpp_eval.py  eval_faces  eval_ssd.py  eval_voc  my_eval.py  quantization.py  run_ssd_live_demo.py  train_faces  train_mobilenet.py  train_ssd.py  train_voc
cpp_client/: CMakeLists.txt  DataProcessing.hpp  Database.hpp  Evaluate.hpp  Export.hpp  PostProcessing.cpp  PreProcessing.cpp  TS_SSDLiteCaller.cpp  TS_SSDLiteCaller.hpp  adjustment.cpp  database.cpp  evaluate.cpp  load_database.cpp  main.cpp  params.txt  run_coverage.sh  tinyxml2.h
cpp_client/tests/: CMakeLists.txt  accuracy.cpp  initialize.cpp  test_config.txt
vision/datasets/: cifar.py  collation.py  conversion_functions.py  faces.py  generate_train_test_faces.py  generate_vocdata.py  open_images.py  voc_dataset.py
vision/nn/: mobilenet_v2.py
vision/ssd/: fpn_mobilenetv1_ssd.py  fpn_ssd.py  mobilenet_v2_ssd_lite.py  mobilenetv1_ssd.py  mobilenetv1_ssd_lite.py  predictor.py  squeezenet_ssd_lite.py  ssd.py  vgg_ssd.py
